--- a/.github/workflows/bnf-pytest.yml
+++ b/.github/workflows/bnf-pytest.yml
@@ -6,6 +6,9 @@ on:
   - pull_request
   - push
 
+env:
+  PYTHON_LATEST_VERSION: '3.14'
+
 jobs:
   pytest:
     runs-on: ubuntu-latest
@@ -51,6 +54,7 @@ jobs:
 
       - uses: astral-sh/setup-uv@v7
         with:
+          python-version: ${{ env.PYTHON_LATEST_VERSION }}
           enable-cache: true
 
       - name: build
